--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Expense Tracker App</h1>
-    <div class="inputs row">
-        <label class="col-2">Catagory</label>
-        <select class="col-2">
+    <div class="inputs">
+        <label>Catagory</label>
+        <select class="catagory">
             <option value="Food">Food</option>
             <option value="Transport">Transport</option>
             <option value="Cloth">Cloth</option>
             <option value="Entertainment">Entertainment</option>
         </select>
-        <label class="col-2">Amount</label>
-        <input type="number" class="col-2">
-        <label class="col-2">Date</label>
-        <input type="date" class="col-2">
-        <button class="col-2">Add</button>
+        <label>Amount</label>
+        <input type="number" class="amount">
+        <label>Date</label>
+        <input type="date" class="date">
+        <button class="add-button">Add</button>
     </div>
     <div class="expense-list">
         <h2>Expense List</h2>
@@ -34,18 +33,20 @@
                     <th>Delete</th>
                 </tr>
             </thead>
-            <tbody id="expense-table-body">
+            <tbody class="expense-table-body">
                 
             </tbody>
             <tfoot>
                 <tr>
                     <td>Total:</td>
-                    <td id="total"></td>
+                    <td class="total"></td>
                     <td></td>
                     <td></td>
                 </tr>
             </tfoot>
         </table>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
